fixed the gaps! finally!

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -38,6 +38,7 @@ body{
     padding: 2%;
     width: 100%;
     display: inline-block;
+		vertical-align: top;
 }
 
 .paperE {
